--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,15 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/login.js"></script>
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <form>
-        <input type="text" name="username" placeholder="Korisnicko ime"><br>
-        <input type="text" name="password" placeholder="Lozinka"><br>
-        <input type="submit" value="Posalji" id="submitButton">
-    </form>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-offset-5 col-md-3">
+                <div class="form-login">
+                    <h4>Dobro došli nazad!</h4>
+                    <input type="text" name="username" class="form-control input-sm chat-input" placeholder="korisničko ime" required />
+                    </br>
+                    <input type="text" name="password" class="form-control input-sm chat-input" placeholder="lozinka" required />
+                    </br>
+                    <div class="wrapper">
+            <span class="group-btn">
+                <a href="#" id="submit" class="btn btn-primary btn-md">prijava <i class="fa fa-sign-in"></i></a>
+            </span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
