--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,12 +18,12 @@
                     <h4>Dobro došli nazad!</h4>
                     <input type="text" name="username" class="form-control input-sm chat-input" placeholder="korisničko ime" required />
                     </br>
-                    <input type="text" name="password" class="form-control input-sm chat-input" placeholder="lozinka" required />
+                    <input type="password" name="password" class="form-control input-sm chat-input" placeholder="lozinka" required />
                     </br>
                     <div class="wrapper">
-            <span class="group-btn">
-                <a href="#" id="submit" class="btn btn-primary btn-md">prijava <i class="fa fa-sign-in"></i></a>
-            </span>
+                        <span class="group-btn">
+                            <a href="#" id="submit" class="btn btn-primary btn-md">prijava <i class="fa fa-sign-in"></i></a>
+                        </span>
                     </div>
                 </div>
 
