--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -3,65 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <script src="js/jquery-1.11.0.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="js/jquery-1.11.0.js"></script>
+
+
     <script src="js/registration.js"></script>
+    <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
 
-    <form id="regform">
-        <input type="text" name="username" placeholder="Korisnicko ime" class="form-field"><br>
-        <input type="text" name="password" placeholder="Lozinka" class="form-field"><br>
-        <input type="text" name="confpassword" placeholder="Ponovite lozinku" class="form-field"><br>
-        <input type="text" name="email" placeholder="Email adresa" class="form-field"><br>
-        <input type="text" name="name" placeholder="Ime" class="form-field"><br>
-        <input type="text" name="lastname" placeholder="Prezime" class="form-field"><br>
-        <input type="text" name="city" placeholder="Grad" class="form-field"><br>
-        <input type="text" name="phonenumber" placeholder="Broj telefona" class="form-field"><br>
-        <input type="submit" value="Posalji" name="submitButton" id="submitButton">
-    </form>
-
-    <div class="container">
+   <div class="container" id="mainContainer">
         <div class="row centered-form">
             <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please sign up for Bootsnipp <small>It's free!</small></h3>
+                        <h1 class="panel-title">Registracija<small>:)</small></h1>
                     </div>
                     <div class="panel-body">
                         <form role="form">
+
+                            <div class="form-group">
+                                <input type="text" name="username" class="form-control input-sm form-field" placeholder="korisničko ime">
+                            </div>
+
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
+                                        <input type="password" name="password" class="form-control input-sm form-field" placeholder="lozinka">
                                     </div>
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
+                                        <input type="password" name="password_confirmation" class="form-control input-sm form-field" placeholder="ponovite lozinku">
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                                <input type="text" name="email" class="form-control input-sm form-field" placeholder="email adresa">
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                        <input type="text" name="first_name" class="form-control input-sm form-field" placeholder="ime">
                                     </div>
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+                                        <input type="text" name="last_name" class="form-control input-sm form-field" placeholder="prezime">
                                     </div>
                                 </div>
                             </div>
 
-                            <input type="submit" value="Register" class="btn btn-info btn-block">
+                            <div class="form-group">
+                                <input type="text" name="city" class="form-control input-sm form-field" placeholder="grad">
+                            </div>
+
+                            <div class="form-group">
+                                <input type="text" name="phonenumber" class="form-control input-sm form-field" placeholder="broj telefona">
+                            </div>
+
+
+
+                            <input type="submit" id="submit" value="Registruj se" class="btn btn-info btn-block">
 
                         </form>
                     </div>
