--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -16,37 +16,37 @@
 </head>
 <body>
 
-<nav id="labelaPodforumi" class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <img src="" class="img-thumbnail">
-            <!--    <a class="navbar-brand" href="#">WebSiteName</a> -->
-        </div>
+<!--<nav id="labelaPodforumi" class="navbar navbar-inverse">-->
+    <!--<div class="container-fluid">-->
+        <!--<div class="navbar-header">-->
+            <!--<img src="" class="img-thumbnail">-->
+            <!--&lt;!&ndash;    <a class="navbar-brand" href="#">WebSiteName</a> &ndash;&gt;-->
+        <!--</div>-->
 
-        <ul id="podforumiNaslovna" class="nav navbar-nav">
-        </ul>
+        <!--<ul id="podforumiNaslovna" class="nav navbar-nav">-->
+        <!--</ul>-->
 
-        <ul class="nav navbar-nav navbar-right">
-            <li><a id="registerLink" href="register.html"><span class="glyphicon glyphicon-user"></span> Registruj
-                se</a></li>
-            <li><a id="loginLink" href="login.html"><span class="glyphicon glyphicon-log-in"></span> Prijavi se</a></li>
-            <li><a id="userLink" href=""><span class="glyphicon glyphicon-user"></span></a></li>
-            <li><a id="logoutLink" href=""><span class="glyphicon glyphicon-log-out"></span> Odjava</a></li>
-            <li>
-                <form class="navbar-form navbar-right">
-                    <div class="input-group">
-                        <input type="text" id="pretraziInput" class="form-control" placeholder="Pretraži">
-                        <div class="input-group-btn">
-                            <button id="searchButton" class="btn btn-default" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </li>
-        </ul>
-    </div>
-</nav>
+        <!--<ul class="nav navbar-nav navbar-right">-->
+            <!--<li><a id="registerLink" href="register.html"><span class="glyphicon glyphicon-user"></span> Registruj-->
+                <!--se</a></li>-->
+            <!--<li><a id="loginLink" href="login.html"><span class="glyphicon glyphicon-log-in"></span> Prijavi se</a></li>-->
+            <!--<li><a id="userLink" href=""><span class="glyphicon glyphicon-user"></span></a></li>-->
+            <!--<li><a id="logoutLink" href=""><span class="glyphicon glyphicon-log-out"></span> Odjava</a></li>-->
+            <!--<li>-->
+                <!--<form class="navbar-form navbar-right">-->
+                    <!--<div class="input-group">-->
+                        <!--<input type="text" id="pretraziInput" class="form-control" placeholder="Pretraži">-->
+                        <!--<div class="input-group-btn">-->
+                            <!--<button id="searchButton" class="btn btn-default" type="submit">-->
+                                <!--<i class="glyphicon glyphicon-search"></i>-->
+                            <!--</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</form>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</nav>-->
 
 
 <div class="container">
