transactions w/o email and cancelation

--- a/src/main/webapp/seatReservation.html
+++ b/src/main/webapp/seatReservation.html
@@ -36,8 +36,11 @@
         </div>
         <div id="searchbox-container" class="panel-body">
         </div>
+        <div id="date-container" class="panel-body">
+        </div>
         <div id="venue-list-container" class="panel-body">
         </div>
+
     </div>
 
 
