--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -27,10 +27,10 @@
         <!--</ul>-->
 
         <!--<ul class="nav navbar-nav navbar-right">-->
-            <!--<li><a id="registerLink" href="register.html"><span class="glyphicon glyphicon-user"></span> Registruj-->
+            <!--<li><a id="registerLink" href="register.html"><span class="glyphicon glyphicon-reservationOwner"></span> Registruj-->
                 <!--se</a></li>-->
             <!--<li><a id="loginLink" href="login.html"><span class="glyphicon glyphicon-log-in"></span> Prijavi se</a></li>-->
-            <!--<li><a id="userLink" href=""><span class="glyphicon glyphicon-user"></span></a></li>-->
+            <!--<li><a id="userLink" href=""><span class="glyphicon glyphicon-reservationOwner"></span></a></li>-->
             <!--<li><a id="logoutLink" href=""><span class="glyphicon glyphicon-log-out"></span> Odjava</a></li>-->
             <!--<li>-->
                 <!--<form class="navbar-form navbar-right">-->
