--- a/src/main/webapp/invite.html
+++ b/src/main/webapp/invite.html
@@ -11,10 +11,12 @@
     <script src="js/profile/friends.js"></script>
     <script src="js/seatPicker/invitation.js"></script>
     <script src="js/seatPicker/inviteFriends.js"></script>
+    <script src="js/navbar.js"></script>
     <script src="js/utils.js"></script>
 
 </head>
 <body>
+<div id="navbar-id"></div>
 
 <div class="col-md-6">
     <div class="panel panel-default">
