--- a/src/main/webapp/seatReservation.html
+++ b/src/main/webapp/seatReservation.html
@@ -12,9 +12,14 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/seatReservation/seatRes.js"></script>
     <script src="js/seatReservation/seatResEvents.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/navbar.js"></script>
+
     <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
+<div id="navbar-id"></div>
+
 <div class="col-md-8 ">
     <div class="panel panel-default">
         <div class="panel-heading">
