--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/navbar.js"></script>
 </head>
 <body>
+<div id="navbar-id"></div>
+
     <h1>Cao velas bration</h1>
 </body>
 </html>
