pocetna stranica za neregistrovane

--- a/src/main/webapp/venue.html
+++ b/src/main/webapp/venue.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Venue</title>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/venue.js"></script>
 </head>
 <body>
-<div class="container">
+<div class = "container">
     <div class="jumbotron">
-        <h1>Bioskopi i pozorišta</h1>
-        <p>Rezervacija karata lakša nego ikad!</p>
-    </div>
-    <div class="list-group">
+        <h1 id="name">  </h1>
+        <p id="description"></p>
     </div>
 </div>
 </body>
