--- a/src/main/webapp/venue.html
+++ b/src/main/webapp/venue.html
@@ -6,14 +6,37 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/navbar.js"></script>
     <script src="js/venue.js"></script>
+    <style>
+        #map {
+            height: 300px;
+            width: 40%;
+        }
+    </style>
 </head>
 <body>
 <div class = "container">
     <div class="jumbotron">
         <h1 id="name">  </h1>
         <p id="description"></p>
+        <p><button  class="btn btn-primary btn-lg ADMIN" style="display: none;" role="button">Edit</button></p>
     </div>
+    <div id="map"></div>
+    <script>
+        function initMap() {
+            var uluru = {lat: -25.363, lng: 131.044};
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 8,
+                center: uluru
+            });
+        }
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADk80poSUgyqOZtM-x1D-UaH9joMnU304&callback=initMap">
+    </script>
 </div>
+
 </body>
 </html>
