editovanje pizorista i bioskopa za administratore

--- a/src/main/webapp/venue.html
+++ b/src/main/webapp/venue.html
@@ -21,7 +21,7 @@
     <div class="jumbotron">
         <h1 id="name">  </h1>
         <p id="description"></p>
-        <p><button  class="btn btn-primary btn-lg ADMIN" style="display: none;" role="button">Edit</button></p>
+        <p><button  class="btn btn-primary btn-lg ADMIN" id="editButton" style="display: none;" role="button">Edit</button></p>
     </div>
     <div id="map"></div>
     <script>
