--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -86,8 +86,8 @@
                             <div class="bot-border"></div>
 
                             <div class="col-sm-8 col-xs-6 tital "></div>
-                            <div id="profile-password" class="col-sm-4"><a href="/api/changePassword.html">Promenite
-                                lozinku</a></div>
+                            <!--<div id="profile-password" class="col-sm-4"><a href="/api/changePassword.html">Promenite-->
+                                <!--lozinku</a></div>-->
                             <div class="clearfix"></div>
                             <div class="bot-border"></div>
 
