--- a/src/main/webapp/changeVenue.html
+++ b/src/main/webapp/changeVenue.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 
-<form>
 
-    <div class="container">
+<div class="container">
+    <form>
         <div class="jumbotron">
             <h1 id="name"></h1>
             <p id="description"></p>
@@ -57,8 +57,47 @@
 
         </div>
         <button id="submitVenueDetails" class="btn btn-primary">Izmeni</button>
+    </form>
+
+</div>
+<hr>
+<div class="container">
+    <div id="halls" class="row">
+        <div class="col-sm-5">
+            <ul class="list-group">
+                <li class="list-group-item">Cras justo odio</li>
+            </ul>
+        </div>
+        <div class="col-sm-1">
+            <button type="button" class="btn  btn-warning">Izmeni</button>
+        </div>
     </div>
-</form>
+    <div class="modal" tabindex="-1" id="seatModal" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Izmena sedišta</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        
+                    </div>
+                    <input type="number" min="0" step="1"/>
+                    <input type="number" min="0" step="1"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Sačuvaj</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvori</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 
 </body>
 </html>
