--- a/src/main/webapp/changeVenue.html
+++ b/src/main/webapp/changeVenue.html
@@ -62,6 +62,7 @@
 </div>
 <hr>
 <div class="container">
+    <h1>Sale</h1>
     <div id="halls" class="row">
         <div class="col-sm-5">
             <ul class="list-group">
@@ -83,13 +84,18 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        
+                        <div class="col-sm-4">Broj redova:</div>
+                        <div class="col-sm-8"><input type="number" id="nRows" min="0" step="1"/></div>
+
                     </div>
-                    <input type="number" min="0" step="1"/>
-                    <input type="number" min="0" step="1"/>
+                    <div class="row">
+                        <div class="col-sm-4">Broj sedišta po redu:</div>
+                        <div class="col-sm-8"><input type="number" id="nCols" min="0" step="1"/></div>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Sačuvaj</button>
+                    <button type="button" class="btn btn-primary" id="changeSeats">Sačuvaj</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvori</button>
                 </div>
             </div>
@@ -97,7 +103,13 @@
     </div>
 
 </div>
+<hr>
+<div class="container">
+    <h1>Projekcije</h1>
+    <div id="projection" class="row">
 
+    </div>
+</div>
 
 </body>
 </html>
