--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -35,6 +35,9 @@
                 <ul class="nav navbar-nav">
                     <li><a id="reservations-link" class="list-link" href="#">Rezervacije</a></li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="/api/seatReservation.html">Rezerviši mesto</a></li>
+                </ul>
             </div>
         </nav>
     </div>
