--- a/src/main/webapp/changeVenue.html
+++ b/src/main/webapp/changeVenue.html
@@ -109,7 +109,11 @@
     <div id="projection" class="row">
 
     </div>
-</div>
+    <div>
+        <button class="btn btn-success" id="addProjectionButton">Dodaj projekciju</button>
+        <button class="btn btn-success">Dodaj predstavu/film</button>
 
+    </div>
+</div>
 </body>
 </html>
