--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -124,6 +124,20 @@
 
         </div>
     </div>
+
+    <hr>
+    <h1>Istorija poseta</h1>
+    <div id="history">
+
+        <ul class="list-group">
+            <li class="list-group-item"><b>Bioskop</b>  - Oceni ambijent:
+                <input type="number" id="venueGrade" min="1" max="5" step="1"/>Oceni predstavu:
+                <input type="number" id="showGrade" min="1" max="5" step="1"/>
+                <button type="button" class="btn btn-primary">Oceni!</button>
+            </li>
+        </ul>
+
+    </div>
 </div>
 </div>
 
