--- a/src/main/webapp/venue.html
+++ b/src/main/webapp/venue.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1 id="name"></h1>
+        <h1 id="name"></h1><h3 id="averageGrade"></h3>
         <p id="description"></p>
         <p>
             <button class="btn btn-primary btn-lg ADMIN" id="editButton" style="display: none;" role="button">Edit
@@ -43,7 +43,7 @@
                     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADk80poSUgyqOZtM-x1D-UaH9joMnU304&callback=initMap">
             </script>
         </div>
-        <div class="col-sm-7" id="discounts">
+        <div class="col-sm-7 ADMIN" id="discounts">
 
         </div>
     </div>
