--- a/src/main/webapp/changeProjection.html
+++ b/src/main/webapp/changeProjection.html
@@ -28,6 +28,7 @@
     <div class="form-group">
         <label for="price">Cena</label>
         <input type="number" id="price" min="0" step="1"/>
+        <button id="makeDiscount" class="btn btn-success" data-toggle="modal" data-target="#discountModal">Stavi na popust!</button>
     </div>
 
     <div class="form-group">
@@ -57,6 +58,26 @@
 
     <button id="submitDetails" class="btn btn-primary">Izmeni</button>
 
+</div>
+<div class="modal" id="discountModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Popust</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Cena sa popustom:
+                <input id="newPrice" type="number" >
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="submitDiscount" class="btn btn-primary">Stavi na popust</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Otkaži</button>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
